Add basic structure and navbar with styling

--- a/index.html
+++ b/index.html
@@ -23,3 +23,37 @@
         <button class="stay-focused btn-style">Stay Focused</button>
       </div>
     </header>
+     <main>
+      <section class="action">
+        <div class="left-side-action">
+          <h3 class="action-title">See It in Action</h3>
+          <p class="action-subtitle">
+            Explore the live preview and imagine your
+            <br> brand in this bold new
+            look.
+          </p>
+          <button class="action-btn bt-style">Launch Live Preview</button>
+        </div>
+        <div class="right-side-action">
+          <img src="./B12A01-landing-launchpad/Assets/wc-mini.png" alt="" />
+        </div>
+      </section>
+      <section class="productive-users-section">
+        <h3 class="productive-users-section-title">
+          Joined Thousands of Productive Users
+        </h3>
+        <div class="productive-users-section-count">
+          <div class="productive-users-details">
+            <h1 class="user-count">50K</h1>
+            <p class="users-count-subtitle">Active User</p>
+          </div>
+          <div class="productive-users-details">
+            <h1 class="user-count">2M+</h1>
+            <p class="users-count-subtitle">Focus Sessions</p>
+          </div>
+          <div class="productive-users-details">
+            <h1 class="user-count">95%</h1>
+            <p class="users-count-subtitle">Satisfaction Rate</p>
+          </div>
+        </div>
+
