Add hero banner section with title and button

--- a/index.html
+++ b/index.html
@@ -56,4 +56,18 @@
             <p class="users-count-subtitle">Satisfaction Rate</p>
           </div>
         </div>
+</section>
+      <section class="user-reviews">
+        <h3 class="user-title">What our users say</h3>
+        <div class="reviews-box">
+          <div class="review">
+            <div class="review-star">
+              <img src="./B12A01-landing-launchpad/Assets/icon-star.png" alt="" />
+            </div>
+            <h2 class="review-title">Loved by Designers</h2>
+            <h6 class="review-message">
+              This template instantly leveled up our presence.” – Studio Vertex
+            </h6>
+            <div class="reviewer-details">
+              <img class="reviewer-img" src="./B12A01-landing-launchpad/Assets/avatar.png" alt="" />
 
