Add user reviews with stars, messages and avatars

--- a/index.html
+++ b/index.html
@@ -102,5 +102,23 @@
             </h6>
             <div class="reviewer-details">
               <img class="reviewer-img" src="./B12A01-landing-launchpad/Assets/avatar.png" alt="" />
+              <div class="name-date">
+                <p class="reviewer-name">Reviewer Name</p>
+                <p class="review-date">Date</p>
+              </div>
+            </div>
+</div>
+        </div>
+      </section>
+      <section class="get-started-banner">
+        <h1 class="get-started-banner-title">Ready to focus better</h1>
+        <h4 class="get-started-banner-subtitle">
+          This template instantly leveled up our presence.” – Studio Vertex
+        </h4>
+        <button class="get-started-btn btn-style">Get Started Free</button>
+        <br />
+        <img src="./B12A01-landing-launchpad/Assets/wc-big.png" />
+      </section>
+
 
 
