add my full styles

--- a/index.html
+++ b/index.html
@@ -119,6 +119,56 @@
         <br />
         <img src="./B12A01-landing-launchpad/Assets/wc-big.png" />
       </section>
-
+<section class="get-in-touch">
+        <div class="get-in-touch-leftside">
+          <h1 class="get-in-touch-title">Let’s Get in Touch</h1>
+        </div>
+        <div class="get-in-touch-rightside">
+          <form>
+            <label for="email">Email</label><br />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="example@email.com"
+            />
+            <br />
+            <label for="name">Name</label><br />
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="full name"
+            /><br />
+            <label for="message">Message</label><br />
+            <textarea
+              name="message"
+              id="message"
+              placeholder="write your message..."
+            ></textarea
+            ><br />
+            <button class="get-in-touch-btn btn-style" type="submit">
+              Get in Touch
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <h1 class="footer-logo-website-name">LOGO</h1>
+      <p class="footer-description">
+        Ready to elevate your online presence? Contact us today to discuss
+        <br>
+         your project and discover how we can bring your vision to life.
+      </p>
+      <div class="footer-links">
+        <a href="#" class="home-tab">Home</a>
+        <a href="#" class="about-tab">About</a>
+        <a href="#" class="how-it-work">How it Works</a>
+        <a href="#" class="services">Services</a>
+      </div>
+    </footer>
+  </body>
+</html>
 
 
